vlib/v/checker/tests/immutable_field_postfix.vv
struct A {
	i int
}

fn main() {
	mut a := A{}
	a.i++
	a.i--
}
